<resources>
    <string name="app_name">Score Keeper</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="goals">Goals</string>
    <string name="on_target">On Target</string>
    <string name="corners">Corners</string>
    <string name="fouls">Fouls</string>
    <string name="yellows">Yellow Cards</string>
    <string name="reds">Red Cards</string>
    <string name="reset">Reset</string>
    <string name="add_sign">+</string>
</resources>
