<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.example.scorekeeper.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1">

            <LinearLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:cursorVisible="false"
                        android:freezesText="true"
                        android:gravity="center"
                        android:hint="@string/team_a"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:padding="16dp"
                        android:textColor="#616161"
                        android:textSize="24sp" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:cursorVisible="false"
                        android:freezesText="true"
                        android:gravity="center"
                        android:hint="@string/team_b"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:padding="16dp"
                        android:textColor="#616161"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:onClick="addGoalForA"
                        android:text="@string/add_sign" />

                    <TextView
                        android:id="@+id/team_a_goals"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="56sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="@string/goals"
                        android:textAllCaps="true"
                        android:textColor="#616161" />

                    <TextView
                        android:id="@+id/team_b_goals"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="56sp" />

                    <Button
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="16dp"
                        android:onClick="addGoalForB"
                        android:text="@string/add_sign"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="16dp"
                        android:onClick="addOnTargetShotForA"
                        android:text="@string/add_sign"/>

                    <TextView
                        android:id="@+id/team_a_onTarget"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="@string/on_target"
                        android:textAllCaps="true"
                        android:textColor="#616161" />

                    <TextView
                        android:id="@+id/team_b_onTarget"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="24sp" />

                    <Button
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginRight="16dp"
                        android:onClick="addOnTargetShotForB"
                        android:text="@string/add_sign"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="16dp"
                        android:onClick="addCornerForA"
                        android:text="@string/add_sign"/>

                    <TextView
                        android:id="@+id/team_a_corners"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="@string/corners"
                        android:textAllCaps="true"
                        android:textColor="#616161" />

                    <TextView
                        android:id="@+id/team_b_corners"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="24sp" />

                    <Button
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginRight="16dp"
                        android:onClick="addCornerForB"
                        android:text="@string/add_sign"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="16dp"
                        android:onClick="addFoulForA"
                        android:text="@string/add_sign"/>

                    <TextView
                        android:id="@+id/team_a_fouls"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="@string/fouls"
                        android:textAllCaps="true"
                        android:textColor="#616161" />

                    <TextView
                        android:id="@+id/team_b_fouls"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="24sp" />

                    <Button
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginRight="16dp"
                        android:onClick="addFoulForB"
                        android:text="@string/add_sign"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="16dp"
                        android:onClick="addYellowForA"
                        android:text="@string/add_sign"/>

                    <TextView
                        android:id="@+id/team_a_yellows"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="@string/yellows"
                        android:textAllCaps="true"
                        android:textColor="#616161" />

                    <TextView
                        android:id="@+id/team_b_yellows"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="24sp" />

                    <Button
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginRight="16dp"
                        android:onClick="addYellowForB"
                        android:text="@string/add_sign"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="16dp"
                        android:onClick="addRedForA"
                        android:text="@string/add_sign"/>

                    <TextView
                        android:id="@+id/team_a_reds"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="@string/reds"
                        android:textAllCaps="true"
                        android:textColor="#616161" />

                    <TextView
                        android:id="@+id/team_b_reds"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="24sp" />

                    <Button
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginRight="16dp"
                        android:onClick="addRedForB"
                        android:text="@string/add_sign"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mainLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:onClick="resetAll"
                android:text="@string/reset" />

        </RelativeLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>